--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div id="all-plants-container"
                     class=" w-full md:w-2/3 border-2 border-red-500  mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 p-4">
 
-                  
+
 
 
                 </div>
@@ -111,7 +111,20 @@
 
 
 
-
+                    <!-- Open the modal using ID.showModal() method -->
+                    <button class="btn" onclick="my_modal_5.showModal()">open modal</button>
+                    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                        <div class="modal-box">
+                            <h3 class="text-lg font-bold">Hello!</h3>
+                            <p class="py-4">Press ESC key or click the button below to close</p>
+                            <div class="modal-action">
+                                <form method="dialog">
+                                    <!-- if there is a button in form, it will close the modal -->
+                                    <button class="btn">Close</button>
+                                </form>
+                            </div>
+                        </div>
+                    </dialog>
 
 
         </section>
