added cart section and complete almost js work

--- a/index.html
+++ b/index.html
@@ -101,11 +101,19 @@
 
                 </div>
 
-                <!--right column-->
-                <div class=" w-1/4 border-2 border-red-500">
+                <!-- right side cart column-->
+                <div class=" w-1/4 border-2 bg-white border-red-500 p-4 flex-col">
+
                     <h1 class="text-xl font-semibold justify-center flex">Your Cart</h1>
+                    <div class=" ">
+
+                        <ul id="cart-list" class="p-2"></ul>
+                    </div>
+
+                    <p class="font-bold text-right p-2">Total: <span id="cart-total">0</span>৳</p>
 
                 </div>
+
 
             </div>
 
