responsive done in end of card

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             items-center mt-20">Choose Your Trees</h2>
 
 
-            <div class="flex p-15 gap-5">
+            <div class="flex flex-col md:flex-row p-15 gap-5">
 
                 <!--left column -> All categories-->
 
@@ -102,7 +102,7 @@
                 </div>
 
                 <!-- right side cart column-->
-                <div class=" w-1/4 border-2 bg-white border-red-500 p-4 flex-col">
+                <div class="w-full md:w-1/4 border-2 bg-white border-red-500 p-4 flex-col">
 
                     <h1 class="text-xl font-semibold justify-center flex">Your Cart</h1>
                     <div class=" ">
