--- a/index.html
+++ b/index.html
@@ -138,7 +138,91 @@
 
         </section>
 
+
+
+
+        <!--plant and text div-->
+
+
+        <div class=" parent-div h-auto w-full flex justify-center items-center py-5 gap-5  bg-[#F0FDF4]">
+
+
+            <!--right div-->
+            <div class="py-10">
+                <h1 class="text-2xl font-semibold text-center mb-5">About the Campaign</h1>
+
+                <div class="flex flex-col-reverse md:flex-row flex-wrap justify-center items-center gap-5">
+
+                    <div class="flex justify-center items-center border-2 border-red-500">
+                        <img src="./assets/about.png" alt="" class="w-[300px] h-full object-contain">
+                    </div>
+
+
+
+                    <!--left div-->
+
+                    <div
+                        class="border-red-500 flex flex-col items-start justify-center gap-5 w-full max-w-[500px] border-2 px-4 md:px-0">
+
+                        <p class="text-sm w-full border-red-500">Green Earth is a global tree plantation initiative
+                            dedicated to
+                            fighting
+                            climate change. Since
+                            our
+                            start,
+                            we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
+                            forests
+                            , create habitats for wildlife, and combat global warming.
+                        </p>
+
+
+                        <div class="mt-5 text-sm w-full">
+                            <ul class="list-disc pl-5">
+                                <li>Restoration of natural habitats</li>
+                                <li>Improvement of air quality</li>
+                                <li>Support for local communities</li>
+                            </ul>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
     </section>
+
+    <!--our impact section-->
+
+    <div class="our-impact h-auto w-full border-2 border-red-500 flex flex-col items-center justify-start bg-[#CFF0DC] p-10">
+
+        <h1 class="font-semibold text-lg ">Our Impact</h1>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-3 w-full justify-items-center text-center items-center py-5 mt-5 ">
+
+            <div class="border-2 border-red-500 p-4 w-50 text-center bg-white rounded-lg">
+                <h2 class="text-2xl font-bold text-[#15803D]">500K+</h2>
+                <p>Trees Planted</p>
+            </div>
+
+            <div class="border-2 border-red-500 p-4 w-50 text-center  bg-white rounded-lg">
+                <h2 class="text-2xl font-bold text-[#15803D]">120+</h2>
+                <p>Communities Involved</p>
+            </div>
+
+            <div class="border-2 border-red-500 p-4 w-50 text-center  bg-white rounded-lg">
+                <h1 class="text-2xl font-bold text-[#15803D]">30+</h1>
+                <p>Countries Reached</p>
+            </div>
+        </div>
+    </div>
+
+
+    <footer>
+
+    </footer>
 
 
 
