--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <!--Card section with API  -->
 
-        <section class=" bg-[#F0FDF4] min-h-screen border-2 border-red-500 p-4">
+        <section class=" bg-[#F0FDF4] min-h-screen  p-4">
 
             <h2 class="text-xl font-semibold flex justify-center 
             items-center mt-20">Choose Your Trees</h2>
@@ -94,7 +94,7 @@
 
                 <!--middle column-->
                 <div id="all-plants-container"
-                    class=" w-full md:w-2/3 border-2 border-red-500  mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 p-4">
+                    class=" w-full md:w-2/3   mx-auto grid grid-cols-1 md:grid-cols-3 gap-6 p-4">
 
 
 
@@ -102,7 +102,7 @@
                 </div>
 
                 <!-- right side cart column-->
-                <div class="w-full md:w-1/4 border-2 bg-white border-red-500 p-4 flex-col">
+                <div class="w-full md:w-1/4  bg-white  p-4 flex-col">
 
                     <h1 class="text-xl font-semibold justify-center flex">Your Cart</h1>
                     <div class=" ">
@@ -141,7 +141,7 @@
 
 
 
-        <!--plant and text div-->
+        <!--plant and text div- about campaign->
 
 
         <div class=" parent-div h-auto w-full flex justify-center items-center py-5 gap-5  bg-[#F0FDF4]">
@@ -153,7 +153,7 @@
 
                 <div class="flex flex-col-reverse md:flex-row flex-wrap justify-center items-center gap-5">
 
-                    <div class="flex justify-center items-center border-2 border-red-500">
+                    <div class="flex justify-center items-center ">
                         <img src="./assets/about.png" alt="" class="w-[300px] h-full object-contain">
                     </div>
 
@@ -162,9 +162,9 @@
                     <!--left div-->
 
                     <div
-                        class="border-red-500 flex flex-col items-start justify-center gap-5 w-full max-w-[500px] border-2 px-4 md:px-0">
+                        class=" flex flex-col items-start justify-center gap-5 w-full max-w-[500px]  px-4 md:px-0">
 
-                        <p class="text-sm w-full border-red-500">Green Earth is a global tree plantation initiative
+                        <p class="text-sm w-full ">Green Earth is a global tree plantation initiative
                             dedicated to
                             fighting
                             climate change. Since
@@ -196,23 +196,25 @@
 
     <!--our impact section-->
 
-    <div class="our-impact h-auto w-full border-2 border-red-500 flex flex-col items-center justify-start bg-[#CFF0DC] p-10">
+    <div
+        class="our-impact h-auto w-full  flex flex-col items-center justify-start bg-[#CFF0DC] p-10">
 
-        <h1 class="font-semibold text-lg ">Our Impact</h1>
+        <h1 class="font-semibold text-3xl ">Our Impact</h1>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-3 w-full justify-items-center text-center items-center py-5 mt-5 ">
+        <div
+            class="grid grid-cols-1 md:grid-cols-3 gap-3 w-full justify-items-center text-center items-center py-5 mt-5 ">
 
-            <div class="border-2 border-red-500 p-4 w-50 text-center bg-white rounded-lg">
+            <div class=" p-4 w-50 text-center bg-white rounded-lg">
                 <h2 class="text-2xl font-bold text-[#15803D]">500K+</h2>
                 <p>Trees Planted</p>
             </div>
 
-            <div class="border-2 border-red-500 p-4 w-50 text-center  bg-white rounded-lg">
+            <div class=" p-4 w-50 text-center  bg-white rounded-lg">
                 <h2 class="text-2xl font-bold text-[#15803D]">120+</h2>
                 <p>Communities Involved</p>
             </div>
 
-            <div class="border-2 border-red-500 p-4 w-50 text-center  bg-white rounded-lg">
+            <div class=" p-4 w-50 text-center  bg-white rounded-lg">
                 <h1 class="text-2xl font-bold text-[#15803D]">30+</h1>
                 <p>Countries Reached</p>
             </div>
@@ -220,10 +222,50 @@
     </div>
 
 
-    <footer>
+    <footer class="bg-[#166534] h-auto w-full  flex flex-col items-center justify-start py-10">
+
+        <h1 class="text-lg font-semibold text-white mb-5">Plant a Tree Today</h1>
+
+
+
+        <div class="w-[400px] h-auto bg-[#15803D] p-10 flex flex-col items-center justify-start rounded-lg shadow-lg">
+
+            <fieldset class="fieldset w-full">
+                <input type="text" class="input" placeholder="Your Name" />
+                <input type="text" class="input" placeholder="Your Email Address" />
+
+                <!--filter category search tree option-->
+
+                <div class="join">
+
+                    <!--filter category search tree option-->
+                    <div>
+                        <div>
+                            <input class="input join-item" placeholder="Number of Trees" />
+                        </div>
+                    </div>
+                    <select class="select join-item w-35">
+                        <option disabled selected>Click here</option>
+                        <option>Mango Tree</option>
+                        <option>Shade Tree</option>
+                        <option>Trimber Tree</option>
+                    </select>
+                </div>
+                <button class="btn btn w-full bg-[#FACC15] text-[#15803D]">Donate Now</button>
+
+            </fieldset>
+        </div>
+
+
 
     </footer>
 
+    <!--Copy-claimed-->
+    <div
+        class="copy-rights bg-[#14532D] h-[50px] w-full  flex flex-col items-center justify-start py-2">
+        <p class="text-white">© 2025 Green Earth. All Rights Reserved.</p>
+
+    </div>
 
 
 </body>
