--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Css-->
     <link rel="stylesheet" href="./style/style.css">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&family=
+Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=
+Manrope:wght@200..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -59,7 +65,7 @@
             <img src="./assets/hero-leaf1.png" alt="" class="md:w-[350px] md:h-[350px]">
 
             <div class="text-center items-center justify-center">
-                <h1 class="md:text-4xl font-bold mt-5 ">Plant a Tree, Grow a Future</h1>
+                <h1 class="hero-tag-special md:text-4xl font-bold mt-5 ">Plant a Tree, Grow a Future</h1>
 
                 <p class="md:text-center md:text-[13px] mx-auto py-5 text-[#1F2937] ">Join our mission to plant 1
                     million trees and make the Earth greener for future<br>
@@ -91,6 +97,7 @@
                     <h1 class="text-xl font-semibold  justify-center flex">Categories</h1>
 
                 </div>
+
 
                 <!--middle column-->
                 <div id="all-plants-container"
@@ -148,47 +155,46 @@
 
 
             <!--right div-->
-            <div class="py-10">
-                <h1 class="text-2xl font-semibold text-center mb-5">About the Campaign</h1>
+        <div class="py-10">
+            <h1 class="text-2xl font-semibold text-center mb-5">About the Campaign</h1>
 
-                <div class="flex flex-col-reverse md:flex-row flex-wrap justify-center items-center gap-5">
+            <div class="flex flex-col-reverse md:flex-row flex-wrap justify-center items-center gap-5">
 
-                    <div class="flex justify-center items-center ">
-                        <img src="./assets/about.png" alt="" class="w-[300px] h-full object-contain">
-                    </div>
-
-
-
-                    <!--left div-->
-
-                    <div
-                        class=" flex flex-col items-start justify-center gap-5 w-full max-w-[500px]  px-4 md:px-0">
-
-                        <p class="text-sm w-full ">Green Earth is a global tree plantation initiative
-                            dedicated to
-                            fighting
-                            climate change. Since
-                            our
-                            start,
-                            we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
-                            forests
-                            , create habitats for wildlife, and combat global warming.
-                        </p>
-
-
-                        <div class="mt-5 text-sm w-full">
-                            <ul class="list-disc pl-5">
-                                <li>Restoration of natural habitats</li>
-                                <li>Improvement of air quality</li>
-                                <li>Support for local communities</li>
-                            </ul>
-
-                        </div>
-
-                    </div>
+                <div class="flex justify-center items-center ">
+                    <img src="./assets/about.png" alt="" class="w-[300px] h-full object-contain">
                 </div>
 
+
+
+                <!--left div-->
+
+                <div class=" flex flex-col items-start justify-center gap-5 w-full max-w-[500px]  px-4 md:px-0">
+
+                    <p class="text-sm w-full ">Green Earth is a global tree plantation initiative
+                        dedicated to
+                        fighting
+                        climate change. Since
+                        our
+                        start,
+                        we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
+                        forests
+                        , create habitats for wildlife, and combat global warming.
+                    </p>
+
+
+                    <div class="mt-5 text-sm w-full">
+                        <ul class="list-disc pl-5">
+                            <li>Restoration of natural habitats</li>
+                            <li>Improvement of air quality</li>
+                            <li>Support for local communities</li>
+                        </ul>
+
+                    </div>
+
+                </div>
             </div>
+
+        </div>
 
         </div>
 
@@ -196,8 +202,7 @@
 
     <!--our impact section-->
 
-    <div
-        class="our-impact h-auto w-full  flex flex-col items-center justify-start bg-[#CFF0DC] p-10">
+    <div class="our-impact h-auto w-full  flex flex-col items-center justify-start bg-[#CFF0DC] p-10">
 
         <h1 class="font-semibold text-3xl ">Our Impact</h1>
 
@@ -261,8 +266,7 @@
     </footer>
 
     <!--Copy-claimed-->
-    <div
-        class="copy-rights bg-[#14532D] h-[50px] w-full  flex flex-col items-center justify-start py-2">
+    <div class="copy-rights bg-[#14532D] h-[50px] w-full  flex flex-col items-center justify-start py-2">
         <p class="text-white">© 2025 Green Earth. All Rights Reserved.</p>
 
     </div>
